--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
