--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "ecommerce": "file:",
     "firebase": "^10.8.0",
-    "next": "14.1.0",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
